force-app/main/default/objects/Individual_Academic_Profile__c/Individual_Academic_Profile__c.object-meta.xml
<CustomObject>
    <description>Academic profile for an individual for an educational institution.</description>
    <label>Individual Academic Profile</label>
    <nameField>
        <label>Individual Academic Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Academic Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>