force-app/main/default/objects/Individual_Academic_Profile__c/fields/Academic_Level__c.field-meta.xml
<CustomField>
    <fullName>Academic_Level__c</fullName>
    <label>Academic Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program_Level</valueSetName>
    </valueSet>
</CustomField>