force-app/main/default/objects/Individual_Academic_Profile__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Individual Academic Profiles</relationshipLabel>
    <relationshipName>Individual_Academic_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>