force-app/main/default/objects/Individual_Academic_Profile__c/fields/Cumulative_GPA__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_GPA__c</fullName>
    <description>The cumulative GPA for the academic term calculated based on Cumulative Quality Points / Cumulative Credits Attempted.</description>
    <inlineHelpText>The cumulative GPA for the academic term calculated based on Cumulative Quality Points / Cumulative Credits Attempted.</inlineHelpText>
    <label>Cumulative GPA</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>