force-app/main/default/objects/Individual_Academic_Profile__c/fields/Cumulative_Quality_Points__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Quality_Points__c</fullName>
    <description>The cumulative quality points from the individual enrollments.</description>
    <inlineHelpText>The cumulative quality points from the individual enrollments.</inlineHelpText>
    <label>Cumulative Quality Points</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>