force-app/main/default/objects/Individual_Academic_Profile__c/fields/Profile_Identifier_Key__c.field-meta.xml
<CustomField>
    <fullName>Profile_Identifier_Key__c</fullName>
    <description>The unique key for an active profile. This is also used by the automation to identify and link an individual program enrollment to an individual academic profile based on the configuration.</description>
    <inlineHelpText>The unique key for an active profile. This is also used by the automation to identify and link an individual program enrollment to an individual academic profile based on the configuration.</inlineHelpText>
    <label>Profile Identifier Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>