force-app/main/default/objects/Individual_Academic_Profile__c/listViews/Active_Profiles.listView-meta.xml
<ListView>
    <fullName>Active_Profiles</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Academic_Level__c</columns>
    <columns>Cumulative_Credits_Attempted__c</columns>
    <columns>Cumulative_Quality_Points__c</columns>
    <columns>Cumulative_GPA__c</columns>
    <columns>Primary__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Profiles</label>
</ListView>