force-app/main/default/objects/Individual_Academic_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Academic_Level__c</columns>
    <columns>Cumulative_Credits_Attempted__c</columns>
    <columns>Cumulative_Quality_Points__c</columns>
    <columns>Cumulative_GPA__c</columns>
    <columns>Primary__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>